[gd_scene load_steps=69 format=3 uid="uid://clursx5m5ve55"]

[ext_resource type="Script" path="res://script/player.gd" id="1_tgypj"]
[ext_resource type="Texture2D" uid="uid://dwlmnr5gig3e0" path="res://assets/image/player/Dead.png" id="2_5a56y"]
[ext_resource type="Texture2D" uid="uid://chlwmhphfm84m" path="res://assets/image/player/Grenade.png" id="3_67jth"]
[ext_resource type="Texture2D" uid="uid://nsgg4jhnnyui" path="res://assets/image/player/Idle.png" id="3_mhtvm"]
[ext_resource type="Texture2D" uid="uid://bej0a82e76m81" path="res://assets/image/player/Walk.png" id="5_5ukbq"]
[ext_resource type="Texture2D" uid="uid://doli3s07rnve3" path="res://assets/image/player/Run.png" id="5_csgxb"]
[ext_resource type="Texture2D" uid="uid://br72fa35bdvpt" path="res://assets/image/player/Reload.png" id="5_vch26"]
[ext_resource type="Texture2D" uid="uid://dg6mttb5tdohg" path="res://assets/image/player/Shot_1.png" id="6_3s5p1"]
[ext_resource type="PackedScene" uid="uid://dcp88ua5lpi5y" path="res://scene/weapon.tscn" id="7_rmudg"]
[ext_resource type="AudioStream" uid="uid://dyaw5g1cou0qg" path="res://assets/sound/SFX-Shot.mp3" id="10_4u0ky"]

[sub_resource type="AtlasTexture" id="AtlasTexture_avbfw"]
atlas = ExtResource("2_5a56y")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0ctj"]
atlas = ExtResource("2_5a56y")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l14y3"]
atlas = ExtResource("2_5a56y")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohk4k"]
atlas = ExtResource("2_5a56y")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s28g7"]
atlas = ExtResource("3_67jth")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed0wf"]
atlas = ExtResource("3_67jth")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ifwr"]
atlas = ExtResource("3_67jth")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbqkq"]
atlas = ExtResource("3_67jth")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbrgr"]
atlas = ExtResource("3_67jth")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8crh"]
atlas = ExtResource("3_67jth")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gec2a"]
atlas = ExtResource("3_67jth")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_et35x"]
atlas = ExtResource("3_67jth")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfvdf"]
atlas = ExtResource("3_67jth")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dlw6"]
atlas = ExtResource("3_67jth")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq1af"]
atlas = ExtResource("3_67jth")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhdne"]
atlas = ExtResource("3_67jth")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_851p3"]
atlas = ExtResource("3_67jth")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb0cg"]
atlas = ExtResource("3_67jth")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_msmmp"]
atlas = ExtResource("3_67jth")
region = Rect2(1792, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3q5u"]
atlas = ExtResource("3_67jth")
region = Rect2(1920, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y7bj"]
atlas = ExtResource("3_mhtvm")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q56b"]
atlas = ExtResource("3_mhtvm")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttcu0"]
atlas = ExtResource("3_mhtvm")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_noo73"]
atlas = ExtResource("3_mhtvm")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgav5"]
atlas = ExtResource("3_mhtvm")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dupb2"]
atlas = ExtResource("3_mhtvm")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdnh2"]
atlas = ExtResource("3_mhtvm")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b522p"]
atlas = ExtResource("3_mhtvm")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg5ei"]
atlas = ExtResource("3_mhtvm")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_awo67"]
atlas = ExtResource("5_vch26")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0gxg"]
atlas = ExtResource("5_vch26")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iquek"]
atlas = ExtResource("5_vch26")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdjaf"]
atlas = ExtResource("5_vch26")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj418"]
atlas = ExtResource("5_vch26")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s0il"]
atlas = ExtResource("5_vch26")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lsr1"]
atlas = ExtResource("5_vch26")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqwnw"]
atlas = ExtResource("5_csgxb")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_up7t3"]
atlas = ExtResource("5_csgxb")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x5s6"]
atlas = ExtResource("5_csgxb")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ojfu"]
atlas = ExtResource("5_csgxb")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sslc8"]
atlas = ExtResource("5_csgxb")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7m5qg"]
atlas = ExtResource("5_csgxb")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w0ne"]
atlas = ExtResource("5_csgxb")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj5h2"]
atlas = ExtResource("5_csgxb")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_36wpf"]
atlas = ExtResource("6_3s5p1")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjd1u"]
atlas = ExtResource("6_3s5p1")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2vdx"]
atlas = ExtResource("6_3s5p1")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3u4f"]
atlas = ExtResource("6_3s5p1")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k26c"]
atlas = ExtResource("5_5ukbq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4qsx"]
atlas = ExtResource("5_5ukbq")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kjjd"]
atlas = ExtResource("5_5ukbq")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pjpx"]
atlas = ExtResource("5_5ukbq")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkr0r"]
atlas = ExtResource("5_5ukbq")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk84k"]
atlas = ExtResource("5_5ukbq")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a13kc"]
atlas = ExtResource("5_5ukbq")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnsva"]
atlas = ExtResource("5_5ukbq")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_133jb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_avbfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0ctj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l14y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohk4k")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s28g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed0wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ifwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbqkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbrgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8crh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gec2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_et35x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfvdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dlw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq1af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhdne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_851p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb0cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msmmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3q5u")
}],
"loop": false,
"name": &"flare",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y7bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q56b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttcu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noo73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgav5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dupb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdnh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b522p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg5ei")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_awo67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0gxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iquek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdjaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj418")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3s0il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lsr1")
}],
"loop": false,
"name": &"reload",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqwnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_up7t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x5s6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ojfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sslc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m5qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w0ne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj5h2")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_36wpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjd1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2vdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3u4f")
}],
"loop": true,
"name": &"shoot",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k26c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4qsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kjjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pjpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkr0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk84k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a13kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnsva")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_66oa4"]
height = 70.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_tgypj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -30)
sprite_frames = SubResource("SpriteFrames_133jb")
animation = &"walk"
frame_progress = 0.40229

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("CapsuleShape2D_66oa4")

[node name="Weapon" parent="." instance=ExtResource("7_rmudg")]

[node name="Shoot" type="Timer" parent="."]
wait_time = 0.5

[node name="Reload" type="Timer" parent="."]
wait_time = 0.5

[node name="SFXShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_4u0ky")

[node name="SFXShootTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="SFXReloadTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="Shoot" to="." method="_on_shoot_timeout"]
[connection signal="timeout" from="Reload" to="." method="_on_reload_timeout"]
